--- a/standard-layout/index.html
+++ b/standard-layout/index.html
@@ -12,7 +12,7 @@
 <div class="wrapper clearfix">
   <main class="main">
   </main>
-  <div class="sidemanu">
+  <div class="sidemenu">
   </div>
 </div>
 <footer class="footer">
