--- a/standard-layout/index.html
+++ b/standard-layout/index.html
@@ -11,6 +11,16 @@
   <h1 class="logo">
     <a href="/">SAMPLE SITE</a>
   </h1>
+  <nav class="global-nav">
+    <ul>
+      <li class="nav-item active"><a href="#">HOME</a></li>
+      <li class="nav-item active"><a href="#">ABOUT</a></li>
+      <li class="nav-item active"><a href="#">NEWS</a></li>
+      <li class="nav-item active"><a href="#">TOPICS</a></li>
+      <li class="nav-item active"><a href="#">DOCS</a></li>
+      <li class="nav-item active"><a href="#">BLOG</a></li>
+    </ul>
+  </nav>
 </header>
 <div class="wrapper clearfix">
   <main class="main">
